--- a/工程師體驗營/JS/DOM.html
+++ b/工程師體驗營/JS/DOM.html
@@ -12,10 +12,12 @@
 <body style="background-color: black; color: white;">
     <!-- el el2 el3 -->
     <h1 id="titleId" class="titleClass">title <em>強調</em></h1>
-    
+    <hr>
+
     <!-- el4 -->
     <h1 class="titleClass2"><em></em></h1>
     <h1 class="titleClass2"><em></em></h1>
+    <hr>
 
     <!-- el5 el6 el7 el8-->
     <h1 class="titleClass3">
@@ -24,6 +26,30 @@
     <div class="str">
         hello
     </div>
+    <hr>
+
+    <!-- el9 el10-->
+    <div class="main">Hello</div>
+    <ul class="list"></ul>
+    <hr>
+
+    <!-- el11-->
+    <h1>每個農場的農夫名子</h1>
+    <ul class="list2">
+    </ul>
+    <hr>
+
+    <!-- str2 el12-->
+    <h1 class="title">
+        <em>title</em>
+    </h1>
+
+    <h1>每個農場的農夫名子</h1>
+    <ul class="list3">
+        <li>農夫一</li>
+        <li>農夫二</li>
+    </ul>
+    <hr>
 
     <!-- script放DOM以後，可以確保DOM加載後才執行，就不會遇到找不到的問題 -->
     <script src="DOM.js"></script>
