--- a/工程師體驗營/JS/event2.html
+++ b/工程師體驗營/JS/event2.html
@@ -23,7 +23,26 @@
         <img src="rocket.jpg" alt="" class="rocket rocket-3">
     </div>
 
-    <!-- blur - 離開焦點時進行事件觸發-->
+    <!-- blur - 離開焦點時進行事件觸發 (若沒輸入數值會跳出警告)-->
+    <h1>顧客購買</h1>
+    <label>漢堡數量：<input type="number" id="burgerInput"></label><br>
+    <label>可樂數量：<input type="number" id="cokeInput"></label><br>
+    <button onclick="calculatePrice()">計算</button>
+    <p id="totalPrice"></p>
+    <hr>
+
+    <!-- mousemove - 當滑鼠滑入指定內容時觸發 -->
+    <div class="box"></div>
+    <!-- 小遊戲 -->
+    <div class="boxgame box1"></div>
+    <div class="boxgame box2"></div>
+    <div class="boxgame box3"></div>
+    <div class="boxgame box4"></div>
+    <div class="boxgame box5"></div>
+    <div class="boxgame box6"></div>
+    <hr>
+
+    <!--  -->
     <hr>
 
     <script src="event2.js"></script>
