--- a/工程師體驗營/JS/event2.html
+++ b/工程師體驗營/JS/event2.html
@@ -42,7 +42,17 @@
     <div class="boxgame box6"></div>
     <hr>
 
-    <!--  -->
+    <!-- 網頁座標 - 了解 screen、page、client 箇中差異 -->
+    <div id="coordinates"></div>
+    <hr>
+
+    <!-- 事件監聽優化篇 - 從父元素來監聽子元素內容 -->
+    <ul class="list2">
+        <h2>標題</h2>
+        <li>查理</li>
+        <li>卡斯伯</li>
+        <a href="#">超連結</a>
+    </ul>
     <hr>
 
     <script src="event2.js"></script>
