--- a/工程師體驗營/JS/event2.html
+++ b/工程師體驗營/JS/event2.html
@@ -25,8 +25,15 @@
 
     <!-- blur - 離開焦點時進行事件觸發 (若沒輸入數值會跳出警告)-->
     <h1>顧客購買</h1>
-    <label>漢堡數量：<input type="number" id="burgerInput"></label><br>
-    <label>可樂數量：<input type="number" id="cokeInput"></label><br>
+    <label>漢堡數量：
+        <input type="number" id="burgerInput">
+    </label>
+    <br>
+
+    <label>可樂數量：
+        <input type="number" id="cokeInput">
+    </label>
+    <br>
     <button onclick="calculatePrice()">計算</button>
     <p id="totalPrice"></p>
     <hr>
