--- a/工程師體驗營/JS/AJAX.html
+++ b/工程師體驗營/JS/AJAX.html
@@ -6,8 +6,18 @@
     <title>AJAX</title>
 </head>
 <body style="background-color: black;color: white;">
-    <!--  -->
-    <hr>
+    <!-- axios 環境安裝 -->
+    <!-- 順序：通常先載入套件，後面才會放自己寫的JS -->
+    <!-- https://github.com/axios/axios#installing -->
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script> 
+    <!-- 可以透過notwork檢查有沒有載入成功，狀態碼出現200就是成功 -->
+
+    <!-- axios-將外部資料寫入到網頁上 -->
+    <h1 class="title"></h1>
+
+
+
+
 
 
     <script src="AJAX.js"></script>
