--- a/工程師體驗營/JS/AJAX2.html
+++ b/工程師體驗營/JS/AJAX2.html
@@ -6,6 +6,16 @@
     <title>AJAX2</title>
 </head>
 <body style="background-color: black;color: white;">
+    <!-- 實做 axios DOM 表單註冊流程 -->
+    帳號：
+    <input type="text" class="account">
+    <br>
+    密碼：
+    <input type="text" class="password">
+    <br>
+    <input type="button" value="送出" class="send">
+    <br>
+
     <!-- axios 環境安裝 -->
     <!-- 順序：通常先載入套件，後面才會放自己寫的JS -->
     <!-- https://github.com/axios/axios#installing -->
